Signed-off-by:ModHussain

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
 	<script type="text/javascript" src="js/customer/customeraddpostreqCtrl.js"></script>
 	<script type="text/javascript" src="js/customer/customerupdatepostreqCtrl.js"></script>
     <script type="text/javascript" src="js/customer/customerresourcemapCtrl.js"></script>
+    <script type="text/javascript" src="js/customer/customerlistCtrl.js"></script>
+	<script type="text/javascript" src="js/customer/customerupdateproCtrl.js"></script>
+    
 	
 
 </body>
